--- a/sitemap.html
+++ b/sitemap.html
@@ -114,8 +114,8 @@
 	<div id="top">
 		<nav>clashnode.github.io HTML Site Map</nav>
 		<h3>
-<span>Last updated: 2024, March 6<br />
-Total pages: 26</span>
+<span>Last updated: 2024, March 14<br />
+Total pages: 34</span>
 <a href="https://clashnode.github.io">clashnode.github.io Homepage</a>
 </h3></div>
 	<div id="cont">
@@ -125,9 +125,17 @@ Total pages: 26</span>
             
 <li class="lpage last-page"><a href="https://clashnode.github.io/" title="ClashNode2024每天更新 | V2ray/SSR/Clash免费节点订阅">ClashNode2024每天更新 | V2ray/SSR/Clash免费节点订阅</a></li><li><ul class="level-1">
 
-            <li class="lhead">free-nodes/  <span class="lcount">25 pages</span></li>
+            <li class="lhead">free-nodes/  <span class="lcount">33 pages</span></li>
             
 <li class="lpage"><a href="https://clashnode.github.io/free-nodes/" title="免费节点 - Clash Node演示站 - 第2页">免费节点 - Clash Node演示站 - 第2页</a></li>
+<li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-3-14-shadowrocket-node.htm" title="3月14日21.4M/S|Shadowrocket/Clash/V2ray/SSR免费节点每天更新订阅链接">3月14日21.4M/S|Shadowrocket/Clash/V2ray/SSR免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-3-13-free-v2ray-subscribe.htm" title="3月13日19M/S|SSR/Clash/Shadowrocket/V2ray免费节点每天更新订阅链接">3月13日19M/S|SSR/Clash/Shadowrocket/V2ray免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-3-12-shadowrocket-node.htm" title="3月12日21.2M/S|V2ray/Clash/SSR/Shadowrocket免费节点每天更新订阅链接">3月12日21.2M/S|V2ray/Clash/SSR/Shadowrocket免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-3-11-shadowrocket-node.htm" title="3月11日19.5M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接">3月11日19.5M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-3-10-node-share-links.htm" title="3月10日19M/S|Clash/SSR/V2ray/Shadowrocket免费节点每天更新订阅链接">3月10日19M/S|Clash/SSR/V2ray/Shadowrocket免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-3-9-free-high-speed-nodes.htm" title="3月9日18.3M/S|SSR/Shadowrocket/V2ray/Clash免费节点每天更新订阅链接">3月9日18.3M/S|SSR/Shadowrocket/V2ray/Clash免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-3-8-free-v2ray.htm" title="3月8日20.3M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接">3月8日20.3M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-3-7-free-shadowrocket-node.htm" title="3月7日21.4M/S|SSR/V2ray/Shadowrocket/Clash免费节点每天更新订阅链接">3月7日21.4M/S|SSR/V2ray/Shadowrocket/Clash免费节点每天更新订阅链接</a></li>
 <li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-3-6-free-ssr-node.htm" title="3月6日22.2M/S|V2ray/SSR/Shadowrocket/Clash免费节点每天更新订阅链接">3月6日22.2M/S|V2ray/SSR/Shadowrocket/Clash免费节点每天更新订阅链接</a></li>
 <li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-3-5-free-subscribe-node.htm" title="3月5日19.2M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接">3月5日19.2M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接</a></li>
 <li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-3-4-clash-node.htm" title="3月4日21.4M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接">3月4日21.4M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</a></li>
@@ -140,6 +148,8 @@ Total pages: 26</span>
 <li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-2-26-free-ssr-subscribe.htm" title="2月26日20.3M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接">2月26日20.3M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接</a></li>
 <li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-2-25-free-ssr-node.htm" title="2月25日20M/S|Clash/SSR/V2ray/Shadowrocket免费节点每天更新订阅链接">2月25日20M/S|Clash/SSR/V2ray/Shadowrocket免费节点每天更新订阅链接</a></li>
 <li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-2-24-clash-node.htm" title="2月24日22.3M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接">2月24日22.3M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashnode.github.io/free-nodes/page-2.htm" title="免费节点 - Clash Node演示站 - 第3页">免费节点 - Clash Node演示站 - 第3页</a></li>
+<li class="lpage"><a href="https://clashnode.github.io/free-nodes/page-3.htm" title="免费节点 - Clash Node演示站 - 第2页">免费节点 - Clash Node演示站 - 第2页</a></li>
 <li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-2-23-shadowrocket-node.htm" title="2月23日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接">2月23日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</a></li>
 <li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-2-22-free-node-subscribe.htm" title="2月22日20.2M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接">2月22日20.2M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
 <li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-2-21-node-share-links.htm" title="2月21日19.4M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接">2月21日19.4M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</a></li>
@@ -148,8 +158,6 @@ Total pages: 26</span>
 <li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-2-18-clash-windows.htm" title="2月18日21.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接">2月18日21.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</a></li>
 <li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-2-17-free-node-subscribe.htm" title="2月17日18M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接">2月17日18M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接</a></li>
 <li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-2-16-clash-v2ray-ss-ssr.htm" title="2月16日20.4M/S|SSR/V2ray/Clash/Shadowrocket免费节点每天更新订阅链接">2月16日20.4M/S|SSR/V2ray/Clash/Shadowrocket免费节点每天更新订阅链接</a></li>
-<li class="lpage"><a href="https://clashnode.github.io/free-nodes/page-2.htm" title="免费节点 - Clash Node演示站 - 第3页">免费节点 - Clash Node演示站 - 第3页</a></li>
-<li class="lpage"><a href="https://clashnode.github.io/free-nodes/page-3.htm" title="免费节点 - Clash Node演示站 - 第2页">免费节点 - Clash Node演示站 - 第2页</a></li>
 <li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-2-15-node-share-links.htm" title="2月15日20.1M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接">2月15日20.1M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接</a></li>
 <li class="lpage last-page"><a href="https://clashnode.github.io/free-nodes/2024-2-14-free-ssr-node.htm" title="2月14日19.8M/S|SSR/V2ray/Shadowrocket/Clash免费节点每天更新订阅链接">2月14日19.8M/S|SSR/V2ray/Shadowrocket/Clash免费节点每天更新订阅链接</a></li>
 </ul></li>
